--- a/hw01_gapminder.Rmd
+++ b/hw01_gapminder.Rmd
@@ -19,7 +19,7 @@ library(gapminder)
 
 ### Exploration of data frames
 
-Let's explore `gapminder` with functions like `head`, `ncol`, `str`, `summary`.
+Let's explore `gapminder` with functions like `head`, `names`, `nrow`, `ncol`, `dim`, `summary`.
 
 ```{r}
 head(gapminder)
@@ -39,6 +39,8 @@ gapminder$lifeExp
 ```
 
 ### Data Visualization
+Let's plot a very simple graph.
+
 ```{r}
 plot(lifeExp ~ gdpPercap, gapminder)
 ```
